--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,46 @@
-flask==2.2.2
-sqlalchemy==1.4.43
-flask-sqlalchemy==2.5.1
 alembic==1.8.1
-psycopg2-binary==2.9.5
-wtforms==3.0.1
-flask-login==0.6.2
-flask-mailgun==0.4
-twilio==7.15.1
-wtforms-alchemy==0.18.0
-XlsxWriter==3.0.3
-reportlab==3.6.12
+apispec==6.0.2
+attrs==22.2.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+decorator==5.1.1
+dnspython==2.3.0
+email-validator==1.3.1
+Flask==2.2.2
+Flask-Login==0.6.2
+Flask-Mailgun==0.4
 flask-smorest==0.40.0
+Flask-SQLAlchemy==2.5.1
+greenlet==2.0.2
+idna==3.4
+infinity==1.5
+iniconfig==2.0.0
+intervals==0.9.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.2
 marshmallow==3.19.0
+packaging==23.0
+Pillow==9.4.0
+pluggy==1.0.0
+psycopg2-binary==2.9.5
+PyJWT==2.6.0
+pytest==7.2.1
+python-dotenv==0.21.1
+pytz==2022.7.1
+reportlab==3.6.12
+requests==2.28.2
+six==1.16.0
+SQLAlchemy==1.4.43
+SQLAlchemy-Utils==0.40.0
+twilio==7.15.1
+urllib3==1.26.14
+validators==0.20.0
+webargs==8.2.0
+Werkzeug==2.2.2
+WTForms==3.0.1
+WTForms-Alchemy==0.18.0
+WTForms-Components==0.10.5
+XlsxWriter==3.0.3
